--- a/manifest.json
+++ b/manifest.json
@@ -8,31 +8,19 @@
     "background_color": "#403B4A",
     "theme_color": "#E7E9BB",
     "icons": [
+
         {
-            "src": "icons/soccer.png",
+            "src": "icons/maskable_icon_512.png",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/png",
+            "purpose": "any maskable"
         },
         {
-            "src": "icons/soccers.png",
+            "src": "icons/maskable_icon_192.png",
             "sizes": "192x192",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/soccert.png",
-            "sizes": "144x144",
-            "type": "image/png"
-        },
-        {
-            "src": "icons/soccera.png",
-            "sizes": "48x48",
-            "type": "image/png"
-          },
-          {
-            "src": "icons/socceru.png",
-            "sizes": "96x96",
-            "type": "image/png"
-          }
+            "type": "image/png",
+            "purpose": "any maskable"
+        }
     ]
-       
+
 }
